--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="manifest.json" />
-    <link rel="shortcut icon" href="" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.png" />
 
     <!-- Google fonts roboto -->
     <link
